fix the width and alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
+:root {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 .container {
+  width: 350px;
   display: flex;
   align-items: center;
   justify-content: center;
